@@ -14,34 +14,6 @@ if prefer :deployment, 'heroku'
   end
   stage_three do
     say_wizard "recipe stage three"
-    say_wizard "creating app.json file for Heroku Button"
-    create_file 'app.json' do <<-TEXT
-{
-  "name": "#{app_name.humanize.titleize}",
-  "description": "Starter application generated by Rails Composer",
-  "logo": "https://avatars3.githubusercontent.com/u/788200",
-TEXT
-    end
-    append_file 'app.json', "  \"repository\": \"https://github.com/RailsApps/#{prefs[:apps4]}\",\n" if prefs.keys.include?(:apps4)
-    append_file 'app.json', '  "keywords": [' + "\n"
-    append_file 'app.json', '    "Rails Composer",' + "\n"
-    append_file 'app.json', '    "RailsApps",' + "\n" + '    "starter",' + "\n" if prefs.keys.include?(:apps4)
-    append_file 'app.json', '    "RSpec",' + "\n" if prefer :tests, 'rspec'
-    append_file 'app.json', '    "Bootstrap",' + "\n" if prefer :frontend, 'bootstrap3'
-    append_file 'app.json', '    "Bootstrap",' + "\n" if prefer :frontend, 'bootstrap4'
-    append_file 'app.json', '    "Foundation",' + "\n" if prefer :frontend, 'pundit'
-    append_file 'app.json', '    "authentication",' + "\n" + '    "Devise",' + "\n" if prefer :authentication, 'devise'
-    append_file 'app.json', '    "authentication",' + "\n" + '    "OmniAuth",' + "\n" if prefer :authentication, 'omniauth'
-    append_file 'app.json', '    "authorization",' + "\n" + '    "roles",' + "\n" if prefer :authorization, 'roles'
-    append_file 'app.json', '    "authorization",' + "\n" + '    "Pundit",' + "\n" if prefer :authorization, 'pundit'
-    append_file 'app.json' do <<-TEXT
-    "Ruby",
-    "Rails"
-  ],
-  "scripts": {},
-  "env": {
-TEXT
-    end
     case prefs[:email]
       when 'gmail'
         append_file 'app.json' do <<-TEXT
